[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Demos/Scripts/FallingBlocksDemo.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tools/QuantizedTimer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Demos/Shapes/BlockControllerShape2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Demos/Shapes/BlockControllerShape1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/GridSquare.png" type="Texture" id=8]
[ext_resource path="res://Fonts/StatsHeadingFont.tres" type="DynamicFont" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 440, 20 )

[node name="FallingBlocksDemo" type="Node2D"]
script = ExtResource( 1 )
spawn_scenes = [ ExtResource( 7 ), ExtResource( 4 ) ]

[node name="Grid" type="TextureRect" parent="."]
margin_left = 580.0
margin_top = 200.0
margin_right = 1380.0
margin_bottom = 1000.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="Grid"]

[node name="TopCollision" type="CollisionShape2D" parent="Grid/Walls"]
position = Vector2( 400, -20 )
shape = SubResource( 1 )

[node name="BottomCollision" type="CollisionShape2D" parent="Grid/Walls"]
position = Vector2( 400, 820 )
shape = SubResource( 1 )

[node name="LeftCollision" type="CollisionShape2D" parent="Grid/Walls"]
position = Vector2( -20, 400 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="RightCollision" type="CollisionShape2D" parent="Grid/Walls"]
position = Vector2( 820, 400 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Obstacles" type="StaticBody2D" parent="Grid"]
modulate = Color( 0.827451, 0.172549, 0.172549, 1 )

[node name="QuantizedTimer" parent="." instance=ExtResource( 2 )]
loop = false
process_in_physics_loop = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
margin_left = 580.0
margin_top = 40.0
margin_right = 1380.0
margin_bottom = 160.0
rect_min_size = Vector2( 800, 120 )
rect_pivot_offset = Vector2( -480, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = 60.0
margin_top = 20.0
margin_right = 500.0
margin_bottom = 809.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This scene demonstrates how to combine the BlockController with a QuantizedTimer to cause blocks to fall as though under the influence of gravity.

The BlockController is not in the node tree at first but is instantiated (spawned) from the script on the root node."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 960, 180 )

[connection signal="on_step" from="QuantizedTimer" to="." method="_on_QuantizedTimer_on_step"]
